# niistats

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
src/niistats/: niistats.py
tests/: test_niistats.py
tests/test_data/: 2subj_all_slice_results.csv  2subj_errors.csv  2subj_results.csv  3d_luthresh.csv  all_labels_in_seg.csv  four_dims.csv  mismatched_geom.csv  no_labels_in_seg.csv  no_nii_file.csv  no_seg_file.csv  one_label_not_in_seg_errors.csv  one_label_not_in_seg_results.csv  slices_3d_errors.csv  slices_3d_results.csv  subj_dir_missing.csv  two_dim.csv  two_dim_invalid_slice.csv  two_dim_luthresh.csv
