[project]
name = "niistats"
version = "1.0.3"
description = "Compute NIfTI image statistics"
readme = "README.md"
authors = [
    { name = "Stephen Wastling", email = "stephen.wastling@nhs.net" }
]
requires-python = ">=3.13"
dependencies = [
    "nibabel>=5.3.2",
    "numpy>=2.1.3",
]

[project.scripts]
niistats = "niistats.niistats:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "pytest>=8.3.3",
    "pytest-console-scripts>=1.4.1",
    "ruff>=0.8.0",
]
